# Vision-Dissect

./: .gitignore  CLAUDE.md  README.md  compare_channels.py  compare_models.py  compare_onnx.py  depth_stream.py  depthpro_app.py  dissect_depthanything.py  dissect_depthpro.py  explore_depthpro.py  explore_sam.py  gac.ps1  onnx_runtime_tutorial.py  pyproject.toml  visualize_outputs.py
apps/: depth_viz_app.py
compare/: compare_channels.py  compare_models.py  compare_onnx.py  visualize_depth.py  visualize_outputs.py
dissect/: dissect_depthanything.py  dissect_depthpro.py
docs/: DEPTHPRO_DETAILED.md  DEPTH_ANYTHING_V2_DETAILED.md  MODEL_ANALYSIS.md  README.md  YOLO11_FAMILY_DETAILED.md  plan-unifiedVisionModelBenchmark.prompt.prompt.md
explore/: explore_depthpro.py  explore_groundingdino.py  explore_sam.py
explorer/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
explorer/playwright-report/: index.html
explorer/test-results/: .last-run.json
health-monitor/: README.md  benchmark.py  benchmark_v1_vs_v2.py  clabsi_guard.py  clabsi_guard_v2.py  debug_predictions.py  monitor.py  onnx_heads.py  pretrained_heads.py  test_fps_lock.py  test_pretrained_integration.py  test_visual_outputs.py  test_visualization.py  utils.py  validate_all.py  webcam_demo.py
health-monitor/backbones/: __init__.py  feature_adapter.py  yolo_backbone.py
health-monitor/benchmarks/: __init__.py  benchmark.py  benchmark_v1_vs_v2.py
server/: .env.example  ADDING_MODELS.md  README.md  config.py  serve.py
vision-bench/: unified_benchmark.py
(+556 files in other folders)
